--- a/Vagrant/Vagrantfile
+++ b/Vagrant/Vagrantfile
@@ -1,12 +1,27 @@
 Vagrant.configure("2") do |config|
-
   config.vm.define "logger" do |cfg|
     cfg.vm.box = "bento/ubuntu-16.04"
     cfg.vm.hostname = "logger"
     config.vm.provision :shell, path: "bootstrap.sh"
-    cfg.vm.network :private_network, ip: "192.168.38.105", gateway: "192.168.38.1", dns: "8.8.8.8"
+    #cfg.vm.network :private_network, ip: "192.168.38.105", gateway: "192.168.38.1", dns: "8.8.8.8"
+
+    cfg.vm.provider :vmware_esxi do |esxi|
+        esxi.esxi_hostname = '192.168.86.11'
+        esxi.esxi_username = 'root'
+        esxi.esxi_password = 'prompt:'
+        esxi.guest_name = 'logger'
+        esxi.guest_memsize = '2048'
+        esxi.guest_numvcpus = '1'
+        esxi.guest_custom_vmx_settings = [
+          ['ethernet1.present','true'],
+          ['ethernet1.startConnected', 'true'],
+          ['ethernet1.virtualDev', 'e1000'],
+          ['ethernet1.networkName', 'VM Network']
+        ]
+    end
 
     cfg.vm.provider "vmware_fusion" do |v, override|
+      override.vm.network :private_network, ip: "192.168.38.105", gateway: "192.168.38.1", dns: "8.8.8.8"
       v.vmx["displayname"] = "logger"
       v.memory = 2048
       v.cpus = 1
@@ -14,6 +29,7 @@ Vagrant.configure("2") do |config|
     end
 
     cfg.vm.provider "vmware_desktop" do |v, override|
+      override.vm.network :private_network, ip: "192.168.38.105", gateway: "192.168.38.1", dns: "8.8.8.8"
       v.vmx["displayname"] = "logger"
       v.memory = 4096
       v.cpus = 2
@@ -21,6 +37,7 @@ Vagrant.configure("2") do |config|
     end
 
     cfg.vm.provider "virtualbox" do |vb, override|
+      override.vm.network :private_network, ip: "192.168.38.105", gateway: "192.168.38.1", dns: "8.8.8.8"
       vb.gui = true
       vb.name = "logger"
       vb.customize ["modifyvm", :id, "--memory", 4096]
@@ -66,6 +83,16 @@ Vagrant.configure("2") do |config|
     cfg.vm.provision "shell", path: "scripts/install-autorunstowineventlog.ps1", privileged: true
     cfg.vm.provision "shell", inline: 'wevtutil el | Foreach-Object {wevtutil cl "$_"}', privileged: true
     cfg.vm.provision "shell", inline: "Set-SmbServerConfiguration -AuditSmb1Access $true -Force", privileged: true
+
+    cfg.vm.provider :vmware_esxi do |esxi, override|
+        override.vm.box = "../Boxes/windows_2016_vmware.box"
+        esxi.esxi_hostname = '192.168.86.11'
+        esxi.esxi_username = 'root'
+        esxi.esxi_password = 'prompt:'
+        esxi.guest_name = 'dc.windomain.local'
+        esxi.guest_memsize = '2560'
+        esxi.guest_numvcpus = '2'
+    end
 
     cfg.vm.provider "vmware_fusion" do |v, override|
       override.vm.box = "../Boxes/windows_2016_vmware.box"
@@ -125,6 +152,16 @@ Vagrant.configure("2") do |config|
     cfg.vm.provision "shell", inline: "Set-SmbServerConfiguration -AuditSmb1Access $true -Force", privileged: true
     cfg.vm.provision "shell", path: "scripts/install-microsoft-ata.ps1", privileged: true
 
+    cfg.vm.provider :vmware_esxi do |esxi, override|
+        override.vm.box = "../Boxes/windows_2016_vmware.box"
+        esxi.esxi_hostname = '192.168.86.11'
+        esxi.esxi_username = 'root'
+        esxi.esxi_password = 'prompt:'
+        esxi.guest_name = 'wef.windomain.local'
+        esxi.guest_memsize = '2048'
+        esxi.guest_numvcpus = '2'
+    end
+
     cfg.vm.provider "vmware_fusion" do |v, override|
       override.vm.box = "../Boxes/windows_2016_vmware.box"
       v.vmx["displayname"] = "wef.windomain.local"
@@ -178,6 +215,16 @@ Vagrant.configure("2") do |config|
     cfg.vm.provision "shell", path: "scripts/install-inputsconf.ps1", privileged: true
     cfg.vm.provision "shell", path: "scripts/install-sysinternals.ps1", privileged: true
     cfg.vm.provision "shell", path: "scripts/install-autorunstowineventlog.ps1", privileged: true
+
+    cfg.vm.provider :vmware_esxi do |esxi, override|
+        override.vm.box = "../Boxes/windows_10_vmware.box"
+        esxi.esxi_hostname = '192.168.86.11'
+        esxi.esxi_username = 'root'
+        esxi.esxi_password = 'prompt:'
+        esxi.guest_name = 'win10.windomain.local'
+        esxi.guest_memsize = '2048'
+        esxi.guest_numvcpus = '1'
+    end
 
     cfg.vm.provider "vmware_fusion" do |v, override|
       override.vm.box = "../Boxes/windows_10_vmware.box"
